// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Single Giving, No Money Buys, with overridden manual input value" renders correctly 1`] = `
.c4 {
  color: #FFFFFF;
  font-size: 4rem;
  line-height: 4rem;
  text-transform: uppercase;
  font-weight: normal;
  font-family: 'Anton',Impact,sans-serif;
  -webkit-letter-spacing: 0.03rem;
  -moz-letter-spacing: 0.03rem;
  -ms-letter-spacing: 0.03rem;
  letter-spacing: 0.03rem;
}

.c5 {
  color: #FFFFFF;
  font-size: 1.25rem;
  line-height: 1.25rem;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-size: 1rem;
}

.c16 {
  font-size: 1.5rem;
  line-height: 1.5rem;
  text-transform: inherit;
  font-weight: bold;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c20 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c18 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #5C5C5E;
}

.c21 {
  margin-bottom: 0.5rem;
  font-weight: normal;
}

.c23 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c23:focus {
  border: 1px solid #666;
}

.c22 {
  position: relative;
  font-size: 1.25rem;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: auto;
  background-color: #274084;
}

.c1 {
  position: relative;
  text-align: center;
  padding: 2rem 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: block;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c3 {
  position: relative;
  text-align: left;
}

.c6 {
  position: relative;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c13 {
  position: relative;
  width: 100%;
  background-color: #FFFFFF;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  border-radius: 10px;
  margin-top: 1rem;
}

.c13 h3 {
  margin-top: 1rem;
}

.c13 input {
  max-width: 100%;
  margin: 0;
}

.c13 input[type='submit'] {
  margin: 2rem 0;
}

.c14 {
  padding: 0 1rem 1rem;
  margin: 0;
  border: none;
}

.c14 input[type='submit'] {
  margin-bottom: 0;
}

.c15 {
  margin: 0;
  padding: 2rem 0.5rem;
  display: block;
  width: 100%;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c19 {
  position: relative;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  font-weight: 400;
  display: block;
}

.c19 span {
  position: absolute;
  font-size: 20px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 0px;
  font-weight: 500;
  padding: 0px 15px;
  z-index: 3;
}

.c19 input {
  height: 48px;
  border: 2px solid #969598;
  background: #F4F3F5;
  border-radius: 10px;
  padding: 0.5rem 1rem 0.5rem 2rem;
}

.c19 input:focus {
  outline: none;
  border: 2px solid #969598;
}

.c24 {
  line-height: 1.5;
  margin-top: 2rem;
}

.c25 {
  width: 100%;
  margin: 2rem 0 2rem;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  min-height: 48px;
  background: #E52630;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 2rem;
  border: none;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c25:active,
.c25:focus,
.c25:hover {
  outline: none;
  background-color: #961D35;
}

.c12 {
  width: 50%;
  height: 48px;
  border-radius: 2rem;
  z-index: 1;
  display: block;
  position: absolute;
  -webkit-transition: left 0.15s ease-out;
  transition: left 0.15s ease-out;
  background-color: #2042AD;
  left: 2px;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.3);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 1rem 0;
}

.c8 {
  width: 100%;
  padding: 2px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 1rem 0;
  border-radius: 2rem;
  background: #BECCF9;
}

.c8 .give-monthly:checked ~ .c11 {
  left: calc(50% - 2px);
}

.c8 input {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c8 input:focus:not(:checked) + label {
  box-shadow: inset 0 0 0 4px #2042AD;
}

.c10 {
  font-size: 1rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: bold;
  min-height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  border: none;
  -webkit-transition: color 0.15s ease-out;
  transition: color 0.15s ease-out;
  z-index: 2;
  cursor: pointer;
  border-radius: 2rem;
  color: #000000;
}

.c10:active:focus {
  box-shadow: none;
}

.c10:focus {
  border: none;
  outline: none;
  box-shadow: inset 0 0 0 4px #2042AD;
}

.c9 {
  font-size: 1rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: bold;
  min-height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  border: none;
  -webkit-transition: color 0.15s ease-out;
  transition: color 0.15s ease-out;
  z-index: 2;
  cursor: default;
  border-radius: 2rem;
  color: #FFFFFF;
}

.c9:active:focus {
  box-shadow: none;
}

.c9:focus {
  border: none;
  outline: none;
  box-shadow: inset 0 0 0 4px #2042AD;
}

@media (min-width:740px) {
  .c5 {
    font-size: 1.25rem;
  }
}

@media (min-width:740px) {
  .c22 {
    max-width: 290px;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: inherit;
    -webkit-justify-content: inherit;
    -ms-flex-pack: inherit;
    justify-content: inherit;
    background-color: #274084;
  }
}

@media (min-width:1024px) {

}

@media (min-width:740px) {
  .c1 {
    padding: 4rem 1rem;
  }
}

@media (min-width:1024px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 4rem 0;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 50%;
    padding: 4rem;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 50%;
  }
}

@media (min-width:740px) {
  .c13 {
    width: 450px;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width:740px) {
  .c14 {
    padding: 0 2rem 2rem;
  }
}

@media (min-width:740px) {
  .c19 {
    -webkit-flex-basis: 60%;
    -ms-flex-preferred-size: 60%;
    flex-basis: 60%;
  }
}

@media (min-width:740px) {
  .c25 {
    padding: 1rem 2rem;
  }
}

@media (min-width:740px) {
  .c8 {
    width: 450px;
    margin: 0 auto;
  }
}

<div
  className="c0"
  id="mship-4"
>
  <div
    aria-live="polite"
    className="c1"
  >
    <div
      className="c2"
      data-test="this-one-here"
    >
      <div
        className="c3"
      >
        <h2
          className="c4"
          color="white"
          size="big"
        >
          Donate Now
        </h2>
        <p
          className="c5"
          color="white"
          size="m"
        >
          Please help us fund life-changing projects in the UK and around the world.
        </p>
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <input
            aria-label="Single"
            checked={true}
            className="give-once"
            id="give-once--mship-4"
            label=""
            onClick={[Function]}
            type="radio"
            value="Single"
          />
          <label
            className="c9"
            htmlFor="give-once--mship-4"
          >
            Single
          </label>
          <input
            aria-label="Monthly"
            checked={false}
            className="give-monthly"
            id="give-monthly--mship-4"
            label=""
            onClick={[Function]}
            type="radio"
            value="Monthly"
          />
          <label
            className="c10"
            htmlFor="give-monthly--mship-4"
          >
            Monthly
          </label>
          <span
            className="c11 c12"
          />
        </div>
      </div>
      <form
        className="c13"
        onSubmit={[Function]}
      >
        <fieldset
          className="c14"
        >
          <legend
            className="c15"
          >
            <span
              className="c16"
              color="inherit"
              size="l"
            >
              Enter an amount to give
            </span>
          </legend>
          <div
            className="c17"
          >
            <label
              className="c18 c19"
              htmlFor="mship-4--MoneyBuy-userInput"
            >
              <span
                className="c20 c21"
                color="inherit"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "£",
                  }
                }
                size="s"
              />
              <div
                className="c22"
              >
                
                <input
                  aria-describedby="mship-4--MoneyBuy-userInput"
                  aria-label="Input a different amount"
                  className="c23"
                  id="mship-4--MoneyBuy-userInput"
                  max="25000"
                  min="1"
                  name="membership_amount"
                  onChange={[Function]}
                  pattern="[^[0-9]+([,.][0-9]+)?$]"
                  placeholder="0.00"
                  required={false}
                  step="0.01"
                  type="string"
                  value={345.67}
                />
              </div>
              
            </label>
          </div>
          <p
            className="c24"
          >
            <strong>
              £345.67 
            </strong>
            will help us fund amazing projects in the UK and around the world.
          </p>
          <button
            className="c25"
            color="red"
            type="submit"
          >
            Donate £345.67 now
          </button>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;

exports[`Monthly donation renders correctly 1`] = `
.c4 {
  color: #FFFFFF;
  font-size: 4rem;
  line-height: 4rem;
  text-transform: uppercase;
  font-weight: normal;
  font-family: 'Anton',Impact,sans-serif;
  -webkit-letter-spacing: 0.03rem;
  -moz-letter-spacing: 0.03rem;
  -ms-letter-spacing: 0.03rem;
  letter-spacing: 0.03rem;
}

.c5 {
  color: #FFFFFF;
  font-size: 1.25rem;
  line-height: 1.25rem;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-size: 1rem;
}

.c15 {
  font-size: 1.5rem;
  line-height: 1.5rem;
  text-transform: inherit;
  font-weight: bold;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c17 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  font-weight: 500;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c21 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c19 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #5C5C5E;
}

.c22 {
  margin-bottom: 0.5rem;
  font-weight: normal;
}

.c24 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c24:focus {
  border: 1px solid #666;
}

.c23 {
  position: relative;
  font-size: 1.25rem;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: auto;
  background-color: #274084;
}

.c1 {
  position: relative;
  text-align: center;
  padding: 2rem 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: block;
  width: 100%;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c3 {
  position: relative;
  text-align: left;
}

.c6 {
  position: relative;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c12 {
  position: relative;
  width: 100%;
  background-color: #FFFFFF;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  border-radius: 10px;
  margin-top: 1rem;
}

.c12 h3 {
  margin-top: 1rem;
}

.c12 input {
  max-width: 100%;
  margin: 0;
}

.c12 input[type='submit'] {
  margin: 2rem 0;
}

.c13 {
  padding: 0 1rem 1rem;
  margin: 0;
  border: none;
}

.c13 input[type='submit'] {
  margin-bottom: 0;
}

.c14 {
  margin: 0;
  padding: 2rem 0.5rem;
  display: block;
  width: 100%;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c18 {
  margin-right: 0.5rem;
}

.c20 {
  position: relative;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  font-weight: 400;
  display: block;
}

.c20 span {
  position: absolute;
  font-size: 20px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 0px;
  font-weight: 500;
  padding: 0px 15px;
  z-index: 3;
}

.c20 input {
  height: 48px;
  border: 2px solid #969598;
  background: #F4F3F5;
  border-radius: 10px;
  padding: 0.5rem 1rem 0.5rem 2rem;
}

.c20 input:focus {
  outline: none;
  border: 2px solid #969598;
}

.c25 {
  line-height: 1.5;
  margin-top: 2rem;
}

.c26 {
  width: 100%;
  margin: 2rem 0 2rem;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  min-height: 48px;
  background: #E52630;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 2rem;
  border: none;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c26:active,
.c26:focus,
.c26:hover {
  outline: none;
  background-color: #961D35;
}

.c11 {
  width: 50%;
  height: 48px;
  border-radius: 2rem;
  z-index: 1;
  display: block;
  position: absolute;
  -webkit-transition: left 0.15s ease-out;
  transition: left 0.15s ease-out;
  background-color: #2042AD;
  left: 2px;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.3);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 1rem 0;
}

.c8 {
  width: 100%;
  padding: 2px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 1rem 0;
  border-radius: 2rem;
  background: #BECCF9;
}

.c8 .give-monthly:checked ~ .c10 {
  left: calc(50% - 2px);
}

.c8 input {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c8 input:focus:not(:checked) + label {
  box-shadow: inset 0 0 0 4px #2042AD;
}

.c9 {
  font-size: 1rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: bold;
  min-height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  border: none;
  -webkit-transition: color 0.15s ease-out;
  transition: color 0.15s ease-out;
  z-index: 2;
  cursor: pointer;
  border-radius: 2rem;
  color: #000000;
}

.c9:active:focus {
  box-shadow: none;
}

.c9:focus {
  border: none;
  outline: none;
  box-shadow: inset 0 0 0 4px #2042AD;
}

@media (min-width:740px) {
  .c5 {
    font-size: 1.25rem;
  }
}

@media (min-width:740px) {
  .c23 {
    max-width: 290px;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: inherit;
    -webkit-justify-content: inherit;
    -ms-flex-pack: inherit;
    justify-content: inherit;
    background-color: transparent;
  }
}

@media (min-width:740px) {
  .c1 {
    padding: 4rem 1rem;
  }
}

@media (min-width:1024px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 4rem 0;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 50%;
    padding: 4rem;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 50%;
  }
}

@media (min-width:740px) {
  .c12 {
    width: 450px;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width:740px) {
  .c13 {
    padding: 0 2rem 2rem;
  }
}

@media (min-width:740px) {
  .c20 {
    -webkit-flex-basis: 60%;
    -ms-flex-preferred-size: 60%;
    flex-basis: 60%;
  }
}

@media (min-width:740px) {
  .c26 {
    padding: 1rem 2rem;
  }
}

@media (min-width:740px) {
  .c8 {
    width: 450px;
    margin: 0 auto;
  }
}

<div
  className="c0"
  id="mship-1"
>
  <div
    aria-live="polite"
    className="c1"
  >
    <div
      className="c2"
      data-test="this-one-here"
    >
      <div
        className="c3"
      >
        <h2
          className="c4"
          color="white"
          size="big"
        >
          Donate Now
        </h2>
        <p
          className="c5"
          color="white"
          size="m"
        >
          Please help us fund life-changing projects in the UK and around the world.
        </p>
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <input
            aria-label="Single"
            checked={false}
            className="give-once"
            id="give-once--mship-1"
            label=""
            onClick={[Function]}
            type="radio"
            value="Single"
          />
          <label
            className="c9"
            htmlFor="give-once--mship-1"
          >
            Single
          </label>
          <input
            aria-label="Monthly"
            checked={false}
            className="give-monthly"
            id="give-monthly--mship-1"
            label=""
            onClick={[Function]}
            type="radio"
            value="Monthly"
          />
          <label
            className="c9"
            htmlFor="give-monthly--mship-1"
          >
            Monthly
          </label>
          <span
            className="c10 c11"
          />
        </div>
      </div>
      <form
        className="c12"
        onSubmit={[Function]}
      >
        <fieldset
          className="c13"
        >
          <legend
            className="c14"
          >
            <span
              className="c15"
              color="inherit"
              size="l"
            >
              Choose an amount to give
            </span>
          </legend>
          <div
            className="c16"
          >
            <span
              className="c17 c18"
              color="inherit"
              size="s"
            >
              Other amount
            </span>
            <label
              className="c19 c20"
              htmlFor="mship-1--MoneyBuy-userInput"
            >
              <span
                className="c21 c22"
                color="inherit"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "£",
                  }
                }
                size="s"
              />
              <div
                className="c23"
              >
                
                <input
                  aria-describedby="mship-1--MoneyBuy-userInput"
                  aria-label="Input a different amount"
                  className="c24"
                  id="mship-1--MoneyBuy-userInput"
                  max="25000"
                  min="1"
                  name="membership_amount"
                  onChange={[Function]}
                  pattern="[^[0-9]+([,.][0-9]+)?$]"
                  placeholder="0.00"
                  required={false}
                  step="0.01"
                  type="string"
                  value={10}
                />
              </div>
              
            </label>
          </div>
          <p
            className="c25"
          >
            <strong>
              £10 
            </strong>
          </p>
          <button
            className="c26"
            color="red"
            type="submit"
          >
            Donate £10 monthly
          </button>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;

exports[`Single donation renders correctly 1`] = `
.c4 {
  color: #FFFFFF;
  font-size: 4rem;
  line-height: 4rem;
  text-transform: uppercase;
  font-weight: normal;
  font-family: 'Anton',Impact,sans-serif;
  -webkit-letter-spacing: 0.03rem;
  -moz-letter-spacing: 0.03rem;
  -ms-letter-spacing: 0.03rem;
  letter-spacing: 0.03rem;
}

.c5 {
  color: #FFFFFF;
  font-size: 1.25rem;
  line-height: 1.25rem;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-size: 1rem;
}

.c10 {
  font-size: 1.5rem;
  line-height: 1.5rem;
  text-transform: inherit;
  font-weight: bold;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c20 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  font-weight: 500;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c14 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c12 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #5C5C5E;
}

.c15 {
  margin-bottom: 0.5rem;
  font-weight: normal;
}

.c17 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c17:focus {
  border: 1px solid #666;
}

.c16 {
  position: relative;
  font-size: 1.25rem;
}

.c13 {
  display: block;
}

.c13 input {
  border: none;
  background-color: #BECCF9;
  color: #000000;
  font-size: 1.5rem;
  font-family: 'Anton',Impact,sans-serif;
  font-weight: normal;
  border-radius: 10px;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  height: auto;
}

.c13 input:focus {
  border: none;
  outline: none;
  box-shadow: inset 0 0 0 4px #2042AD;
}

.c13 input:active:focus {
  box-shadow: 0px 0px 16px rgba(0,0,0,0.3);
}

.c18 {
  display: block;
}

.c18 input {
  border: none;
  background-color: #BECCF9;
  color: #000000;
  font-size: 1.5rem;
  font-family: 'Anton',Impact,sans-serif;
  font-weight: normal;
  border-radius: 10px;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  height: auto;
  background-color: #2042AD;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.3);
  color: #FFFFFF;
}

.c18 input:focus {
  border: none;
  outline: none;
  box-shadow: inset 0 0 0 4px #2042AD;
}

.c18 input:active:focus {
  box-shadow: 0px 0px 16px rgba(0,0,0,0.3);
}

.c18 input:focus {
  box-shadow: 0px 0px 16px rgba(0,0,0,0.3);
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: auto;
  background-color: #274084;
}

.c1 {
  position: relative;
  text-align: center;
  padding: 2rem 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: block;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c3 {
  position: relative;
  text-align: left;
}

.c6 {
  position: relative;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c7 {
  position: relative;
  width: 100%;
  background-color: #FFFFFF;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  border-radius: 10px;
  margin-top: 1rem;
}

.c7 h3 {
  margin-top: 1rem;
}

.c7 input {
  max-width: 100%;
  margin: 0;
}

.c7 input[type='submit'] {
  margin: 2rem 0;
}

.c8 {
  padding: 0 1rem 1rem;
  margin: 0;
  border: none;
}

.c8 input[type='submit'] {
  margin-bottom: 0;
}

.c9 {
  margin: 0;
  padding: 2rem 0.5rem;
  display: block;
  width: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 2rem;
}

.c11 label {
  -webkit-flex: 0 0 30%;
  -ms-flex: 0 0 30%;
  flex: 0 0 30%;
  margin-bottom: 0.5rem;
}

.c11 label input {
  cursor: pointer;
  padding: 1.5rem 0.5rem;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c21 {
  margin-right: 0.5rem;
}

.c22 {
  position: relative;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  font-weight: 400;
  display: block;
}

.c22 span {
  position: absolute;
  font-size: 20px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 0px;
  font-weight: 500;
  padding: 0px 15px;
  z-index: 3;
}

.c22 input {
  height: 48px;
  border: 2px solid #969598;
  background: #F4F3F5;
  border-radius: 10px;
  padding: 0.5rem 1rem 0.5rem 2rem;
}

.c22 input:focus {
  outline: none;
  border: 2px solid #969598;
}

.c23 {
  line-height: 1.5;
  margin-top: 2rem;
}

.c24 {
  width: 100%;
  margin: 2rem 0 2rem;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  min-height: 48px;
  background: #E52630;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 2rem;
  border: none;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c24:active,
.c24:focus,
.c24:hover {
  outline: none;
  background-color: #961D35;
}

@media (min-width:740px) {
  .c5 {
    font-size: 1.25rem;
  }
}

@media (min-width:740px) {
  .c16 {
    max-width: 290px;
  }
}

@media (min-width:740px) {
  .c13 input {
    font-size: 2rem;
    padding: 1.5rem;
  }
}

@media (min-width:740px) {
  .c18 input {
    font-size: 2rem;
    padding: 1.5rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: inherit;
    -webkit-justify-content: inherit;
    -ms-flex-pack: inherit;
    justify-content: inherit;
    background-color: transparent;
  }
}

@media (min-width:740px) {
  .c1 {
    padding: 4rem 1rem;
  }
}

@media (min-width:1024px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 4rem 0;
  }
}

@media (min-width:740px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {
  .c2 {
    width: 50%;
    padding: 4rem;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 50%;
  }
}

@media (min-width:740px) {
  .c7 {
    width: 450px;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width:740px) {
  .c8 {
    padding: 0 2rem 2rem;
  }
}

@media (min-width:740px) {
  .c11 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:740px) {
  .c11 label {
    margin-bottom: 0;
  }
}

@media (min-width:740px) {
  .c22 {
    -webkit-flex-basis: 60%;
    -ms-flex-preferred-size: 60%;
    flex-basis: 60%;
  }
}

@media (min-width:740px) {
  .c24 {
    padding: 1rem 2rem;
  }
}

@media (min-width:740px) {

}

<div
  className="c0"
  id="mship-1"
>
  <div
    aria-live="polite"
    className="c1"
  >
    <div
      className="c2"
      data-test="this-one-here"
    >
      <div
        className="c3"
      >
        <h2
          className="c4"
          color="white"
          size="big"
        >
          Donate Now
        </h2>
        <p
          className="c5"
          color="white"
          size="m"
        >
          Please help us fund life-changing projects in the UK and around the world.
        </p>
      </div>
    </div>
    <div
      className="c6"
    >
      <form
        className="c7"
        onSubmit={[Function]}
      >
        <fieldset
          className="c8"
        >
          <legend
            className="c9"
          >
            <span
              className="c10"
              color="inherit"
              size="l"
            >
              Choose an amount to give
            </span>
          </legend>
          <div
            className="c11"
          >
            <label
              className="c12 c13"
              htmlFor="mship-1--moneyBuy-box1"
            >
              <span
                className="c14 c15"
                color="inherit"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "",
                  }
                }
                size="s"
              />
              <div
                className="c16"
              >
                
                <input
                  aria-describedby="mship-1--moneyBuy-box1"
                  aria-label="£10"
                  className="c17"
                  id="mship-1--moneyBuy-box1"
                  name="mship-1--moneyBuy1"
                  onClick={[Function]}
                  placeholder=""
                  required={false}
                  type="button"
                  value="£ 10"
                />
              </div>
              
            </label>
            <label
              className="c12 c18"
              htmlFor="mship-1--moneyBuy-box2"
            >
              <span
                className="c14 c15"
                color="inherit"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "",
                  }
                }
                size="s"
              />
              <div
                className="c16"
              >
                
                <input
                  aria-describedby="mship-1--moneyBuy-box2"
                  aria-label="£20"
                  className="c17"
                  id="mship-1--moneyBuy-box2"
                  name="mship-1--moneyBuy2"
                  onClick={[Function]}
                  placeholder=""
                  required={false}
                  type="button"
                  value="£ 20"
                />
              </div>
              
            </label>
            <label
              className="c12 c13"
              htmlFor="mship-1--moneyBuy-box3"
            >
              <span
                className="c14 c15"
                color="inherit"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "",
                  }
                }
                size="s"
              />
              <div
                className="c16"
              >
                
                <input
                  aria-describedby="mship-1--moneyBuy-box3"
                  aria-label="£30"
                  className="c17"
                  id="mship-1--moneyBuy-box3"
                  name="mship-1--moneyBuy3"
                  onClick={[Function]}
                  placeholder=""
                  required={false}
                  type="button"
                  value="£ 30"
                />
              </div>
              
            </label>
          </div>
          <div
            className="c19"
          >
            <span
              className="c20 c21"
              color="inherit"
              size="s"
            >
              Other amount
            </span>
            <label
              className="c12 c22"
              htmlFor="mship-1--MoneyBuy-userInput"
            >
              <span
                className="c14 c15"
                color="inherit"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "£",
                  }
                }
                size="s"
              />
              <div
                className="c16"
              >
                
                <input
                  aria-describedby="mship-1--MoneyBuy-userInput"
                  aria-label="Input a different amount"
                  className="c17"
                  id="mship-1--MoneyBuy-userInput"
                  max="25000"
                  min="1"
                  name="membership_amount"
                  onChange={[Function]}
                  pattern="[^[0-9]+([,.][0-9]+)?$]"
                  placeholder="0.00"
                  required={false}
                  step="0.01"
                  type="string"
                  value={20}
                />
              </div>
              
            </label>
          </div>
          <p
            className="c23"
          >
            <strong>
              £20 
            </strong>
            a support worker to visit 10 isolated young mums with postnatal depression in the UK.
          </p>
          <button
            className="c24"
            color="red"
            type="submit"
          >
            Donate £20 now
          </button>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;

exports[`Single donation with no Money Buys renders correctly 1`] = `
.c4 {
  color: #FFFFFF;
  font-size: 4rem;
  line-height: 4rem;
  text-transform: uppercase;
  font-weight: normal;
  font-family: 'Anton',Impact,sans-serif;
  -webkit-letter-spacing: 0.03rem;
  -moz-letter-spacing: 0.03rem;
  -ms-letter-spacing: 0.03rem;
  letter-spacing: 0.03rem;
}

.c5 {
  color: #FFFFFF;
  font-size: 1.25rem;
  line-height: 1.25rem;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-size: 1rem;
}

.c10 {
  font-size: 1.5rem;
  line-height: 1.5rem;
  text-transform: inherit;
  font-weight: bold;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c14 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c12 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #5C5C5E;
}

.c15 {
  margin-bottom: 0.5rem;
  font-weight: normal;
}

.c17 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c17:focus {
  border: 1px solid #666;
}

.c16 {
  position: relative;
  font-size: 1.25rem;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: auto;
  background-color: #274084;
}

.c1 {
  position: relative;
  text-align: center;
  padding: 2rem 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: block;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c3 {
  position: relative;
  text-align: left;
}

.c6 {
  position: relative;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c7 {
  position: relative;
  width: 100%;
  background-color: #FFFFFF;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  border-radius: 10px;
  margin-top: 1rem;
}

.c7 h3 {
  margin-top: 1rem;
}

.c7 input {
  max-width: 100%;
  margin: 0;
}

.c7 input[type='submit'] {
  margin: 2rem 0;
}

.c8 {
  padding: 0 1rem 1rem;
  margin: 0;
  border: none;
}

.c8 input[type='submit'] {
  margin-bottom: 0;
}

.c9 {
  margin: 0;
  padding: 2rem 0.5rem;
  display: block;
  width: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  position: relative;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  font-weight: 400;
  display: block;
}

.c13 span {
  position: absolute;
  font-size: 20px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 0px;
  font-weight: 500;
  padding: 0px 15px;
  z-index: 3;
}

.c13 input {
  height: 48px;
  border: 2px solid #969598;
  background: #F4F3F5;
  border-radius: 10px;
  padding: 0.5rem 1rem 0.5rem 2rem;
}

.c13 input:focus {
  outline: none;
  border: 2px solid #969598;
}

.c18 {
  line-height: 1.5;
  margin-top: 2rem;
}

.c19 {
  width: 100%;
  margin: 2rem 0 2rem;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  min-height: 48px;
  background: #E52630;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 2rem;
  border: none;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c19:active,
.c19:focus,
.c19:hover {
  outline: none;
  background-color: #961D35;
}

@media (min-width:740px) {
  .c5 {
    font-size: 1.25rem;
  }
}

@media (min-width:740px) {
  .c16 {
    max-width: 290px;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: inherit;
    -webkit-justify-content: inherit;
    -ms-flex-pack: inherit;
    justify-content: inherit;
    background-color: transparent;
  }
}

@media (min-width:740px) {
  .c1 {
    padding: 4rem 1rem;
  }
}

@media (min-width:1024px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 4rem 0;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 50%;
    padding: 4rem;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 50%;
  }
}

@media (min-width:740px) {
  .c7 {
    width: 450px;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width:740px) {
  .c8 {
    padding: 0 2rem 2rem;
  }
}

@media (min-width:740px) {
  .c13 {
    -webkit-flex-basis: 60%;
    -ms-flex-preferred-size: 60%;
    flex-basis: 60%;
  }
}

@media (min-width:740px) {
  .c19 {
    padding: 1rem 2rem;
  }
}

<div
  className="c0"
  id="mship-1"
>
  <div
    aria-live="polite"
    className="c1"
  >
    <div
      className="c2"
      data-test="this-one-here"
    >
      <div
        className="c3"
      >
        <h2
          className="c4"
          color="white"
          size="big"
        >
          Donate Now
        </h2>
        <p
          className="c5"
          color="white"
          size="m"
        >
          Please help us fund life-changing projects in the UK and around the world.
        </p>
      </div>
    </div>
    <div
      className="c6"
    >
      <form
        className="c7"
        onSubmit={[Function]}
      >
        <fieldset
          className="c8"
        >
          <legend
            className="c9"
          >
            <span
              className="c10"
              color="inherit"
              size="l"
            >
              Overridden via the 'choose amount text' props
            </span>
          </legend>
          <div
            className="c11"
          >
            <label
              className="c12 c13"
              htmlFor="mship-1--MoneyBuy-userInput"
            >
              <span
                className="c14 c15"
                color="inherit"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "£",
                  }
                }
                size="s"
              />
              <div
                className="c16"
              >
                
                <input
                  aria-describedby="mship-1--MoneyBuy-userInput"
                  aria-label="Input a different amount"
                  className="c17"
                  id="mship-1--MoneyBuy-userInput"
                  max="25000"
                  min="1"
                  name="membership_amount"
                  onChange={[Function]}
                  pattern="[^[0-9]+([,.][0-9]+)?$]"
                  placeholder="0.00"
                  required={false}
                  step="0.01"
                  type="string"
                  value={10}
                />
              </div>
              
            </label>
          </div>
          <p
            className="c18"
          >
            <strong>
              £10 
            </strong>
          </p>
          <button
            className="c19"
            color="red"
            type="submit"
          >
            Donate £10 monthly
          </button>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;
